--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
 
     <meta name="theme-color" content="#fafafa" />
@@ -37,16 +38,42 @@
             <a href="#"><i class="fab fa-instagram"></i></a>
           </nav>
           <div class="informacion-evento">
-            <p class="fecha"><i class="far fa-calendar-alt"></i>10-12 Dic</p>
-            <p class="ciudad">
-              <i class="fas fa-map-marker-alt"></i>Málaga, ES
+            <div class="clearfix">
+              <p class="fecha"><i class="far fa-calendar-alt"></i>10-12 Dic</p>
+              <p class="ciudad">
+                <i class="fas fa-map-marker-alt"></i>Málaga, ES
+              </p>
+            </div>
+
+            <h1 class="nombre-sitio">MaWebCamp</h1>
+            <p class="slogan">
+              La mejor conferencia de <span>Diseño Web</span>
             </p>
           </div>
-          <h1 class="nombre-sitio">MaWebCamp</h1>
-          <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
         </div>
       </div>
     </header>
+    <div class="barra">
+      <div class="contenedor clearfix">
+        <div class="logo">
+          <img src="img/logo.svg" alt="logo">
+        </div>
+        <div class="menu-movil">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <nav class="navegacion-principal">
+          <a href="">Conferencia</a>
+          <a href="">Calendario</a>
+          <a href="">Invitados</a>
+          <a href="">Reservas</a>
+        </nav>
+      </div>
+    </div>
+
+
+
 
     <script src="js/vendor/modernizr-3.7.1.min.js"></script>
     <script
