--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
         </nav>
       </div>
     </div>
+    <section class="seccion contenedor">
+      <h2>La mejor conferencia de Diseño Web en Málaga</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur ex aspernatur consequatur similique fuga, sapiente reiciendis, voluptas, rerum incidunt ullam recusandae ut hic mollitia! Temporibus obcaecati, at illo voluptatum reprehenderit perspiciatis ea quam, iure culpa eligendi sapiente vel velit nulla natus, illum nobis voluptate sint officia recusandae quaerat? Dolores similique, quibusdam eius ut quis dolorum molestiae magnam odit. Asperiores cum qui, rerum nisi atque officiis illo recusandae delectus officia aperiam, dolorem eos veniam praesentium labore quod. Ipsum dolore neque suscipit debitis qui et nemo beatae deserunt! Rerum nesciunt sapiente asperiores magni eum atque recusandae quia repellat, porro nihil incidunt?</p>
+    </section>
 
 
 
