--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
 
     <meta name="theme-color" content="#fafafa" />
@@ -56,7 +59,7 @@
     <div class="barra">
       <div class="contenedor clearfix">
         <div class="logo">
-          <img src="img/logo.svg" alt="logo">
+          <img src="img/logo.svg" alt="logo" />
         </div>
         <div class="menu-movil">
           <span></span>
@@ -73,11 +76,42 @@
     </div>
     <section class="seccion contenedor">
       <h2>La mejor conferencia de Diseño Web en Málaga</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur ex aspernatur consequatur similique fuga, sapiente reiciendis, voluptas, rerum incidunt ullam recusandae ut hic mollitia! Temporibus obcaecati, at illo voluptatum reprehenderit perspiciatis ea quam, iure culpa eligendi sapiente vel velit nulla natus, illum nobis voluptate sint officia recusandae quaerat? Dolores similique, quibusdam eius ut quis dolorum molestiae magnam odit. Asperiores cum qui, rerum nisi atque officiis illo recusandae delectus officia aperiam, dolorem eos veniam praesentium labore quod. Ipsum dolore neque suscipit debitis qui et nemo beatae deserunt! Rerum nesciunt sapiente asperiores magni eum atque recusandae quia repellat, porro nihil incidunt?</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur
+        ex aspernatur consequatur similique fuga, sapiente reiciendis, voluptas,
+        rerum incidunt ullam recusandae ut hic mollitia! Temporibus obcaecati,
+        at illo voluptatum reprehenderit perspiciatis ea quam, iure culpa
+        eligendi sapiente vel velit nulla natus, illum nobis voluptate sint
+        officia recusandae quaerat? Dolores similique, quibusdam eius ut quis
+        dolorum molestiae magnam odit. Asperiores cum qui, rerum nisi atque
+        officiis illo recusandae delectus officia aperiam, dolorem eos veniam
+        praesentium labore quod. Ipsum dolore neque suscipit debitis qui et nemo
+        beatae deserunt! Rerum nesciunt sapiente asperiores magni eum atque
+        recusandae quia repellat, porro nihil incidunt?
+      </p>
     </section>
 
-
-
+    <section class="programa">
+      <div class="contenedor-video">
+        <video autoplay loop poster="img/bg-talleres.jpg">
+          <source src="video/video.mp4" type="video/mp4" />
+          <source src="video/video.ogv" type="video/ogg" />
+          <source src="video/video.webm" type="video/webm" />
+        </video>
+      </div>
+      <div class="contenido-programa">
+        <div class="contenedor">
+          <div class="programa-evento">
+            <h2>Programa del evento</h2>
+            <nav class="menu-programa">
+              <a href="#"><i class="fa fa-code"></i>Talleres</a>
+              <a href="#"><i class="fa fa-comment"></i>Conferencias</a>
+              <a href="#"><i class="fa fa-university"></i>Seminarios</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="js/vendor/modernizr-3.7.1.min.js"></script>
     <script
